k8s/go-app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: go-app
  namespace: go-app
  labels:
    app: go-app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:718996164372:certificate/75e600bb-f301-4b46-96c8-2ba90cfd13b7
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  rules:
    - http:
        paths:
         - path: /*
           backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
    - host: app.aws.lb-dev.io
      http:
        paths:
          - path: /*
            backend:
              serviceName: go-app
              servicePort: 80
